=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 2.008 - In Development

=over

=item *

More uniform password validation. Now also easier to implement a custom
password policy as an addon. [Michael Peters]

=item * 

Added security feature of locking out users after several failed login
attempts. Configurable by the BadLoginCount and BadLoginWait conf
directives. [Michael Peters]

=item *

Fixed bug in Krang::AddOn which would cause multiple version upgrades
which include changes to class.conf to fail.  Specifically, the updated
class.conf (and other libraries) were not being reloaded until after
the upgrade ran.  [Jesse Erlbaum]

=item *

Fixed bug in import where templates that were not deployed on the original
site, where deployed on the target site upon import. [Michael Peters]

=item *

Fixed bug in install/upgrade when using a binary built for SSL
in the way SSL symlinked conf files were handled. [Michael Peters]

=back

=head2 2.007 - Sep 14th, 2006

=over

=item *

Changed ElementClass::ListGroup input_form so that it will not
redundantly label single-dimensional lists.  Also modified 
ListGroup to be more easily sub-classed. [Jesse Erlbaum]

=item *

Fixed bug in which HTTP redirects in KRANG_DEBUG mode would
cause session to not be unloaded and saved to disk.  [Jesse Erlbaum]

=item *

MSIE Mac is not un-supported (it never was really, it's now
official). Allow Konqueror to come in as well. [Michael Peters]

=item *

Fixed several places lacking in HTML escaping, particularly
in places that used Krang::HTMLPager. [Michael Peters]

=item *

Krang now automatically deletes any alerts tied to a desk when
that desk is deleted. [Michael Peters]

=item *

Fixed krang_install --FromBackup issues when the backups contain
addons. [Michael Peters]

=item *

Fixed bug where KDS import would trigger delete_hook calls when
updating elements for stories and categories. [Sam]

=item *
